--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,7 @@
     text-align: center;
     font-size: 14px;
     color: #666;
+    margin: 0 auto;
     border-top: 1px solid #ccc;
     width: 70%;
   }
