design: header UI 수정

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 70px;
+    height: var(--navbar-height);
 }
 
 .nav {
