refactor: ERROR 페이지에 GoBack 버튼 추가
ERROR 페이지로 이동하게 될 경우, 해당 화면에서
벗어날 수 있도록 GoBack 버튼을 추가함.

--- a/src/styles/error.module.css
+++ b/src/styles/error.module.css
@@ -9,3 +9,17 @@
 .error_page p i {
     color: #8b8b8b;
 }
+
+.back_button {
+    margin-top: 20px;
+    font-family: "NanumGothic";
+    background-color: #8695c9;
+    width: 100px;
+    height: 40px;
+    color: #fff;
+    transition: all 0.4s;
+}
+
+.back_button:hover {
+    background-color: #36406b;
+}
