design: layout-flex-grid-3 css 변경
3단 레이아웃의 경우, 3단 -> 1단이 아닌 화면 크기에 따라
단계별로 3단 -> 2단 -> 1단으로 변화하도록 변경함.

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -10,7 +10,13 @@
     grid-gap: 10px;
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 1280px) {
+    .layout-flex-grid-3 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
     .layout-flex-grid-2 {
         grid-template-columns: repeat(1, 1fr);
     }
