design: Main Page 디자인 소폭 수정
그런데 마음에 안드네요.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -59,3 +59,10 @@ input {
 input:focus {
     outline: #8695c9 1px solid;
 }
+
+.line {
+    height: 1px;
+    background-color: #cecece;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
