--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -14,10 +14,10 @@
 }
 
 .title_content {
-    font-family: "NamunGothic";
-    font-size: 14px;
-    margin-left: 6em;
-    margin-right: 6em;
+    font-family: "IBMPlexSansKR-Regular";
+    font-size: 1em;
+    margin-left: 4em;
+    margin-right: 4em;
     text-align: left;
 }
 
