--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -10,6 +10,12 @@
     grid-gap: 10px;
 }
 
+.layout-flex-grid-4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+}
+
 @media screen and (max-width: 1280px) {
     .layout-flex-grid-3 {
         grid-template-columns: repeat(2, 1fr);
@@ -22,6 +28,10 @@
     }
 
     .layout-flex-grid-3 {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .layout-flex-grid-4 {
         grid-template-columns: repeat(1, 1fr);
     }
 }
