refactor: Interview Feedback 페이지
1. 점수 데이터 파싱이 불가능하므로, 레이더 차트 표기 삭제.
2. 테스트 데이터를 지우고 API 요청 결과값으로 반영함.
3. 면접종료 버튼을 눌렀을 때 피드백 데이터를 서버로 보냄.

--- a/src/styles/interviewFeedback.module.css
+++ b/src/styles/interviewFeedback.module.css
@@ -60,6 +60,7 @@
 .interview_box div span:not(:first-child) {
     font-family: "NamunGothic";
     font-size: 0.9em;
+    white-space: pre-wrap; /* 텍스트에 개행 적용 */
 }
 
 .interview_box div:not(:last-child) {
@@ -74,6 +75,15 @@
     background-color: white;
     border-radius: 10px;
     padding: 15px;
+}
+
+.feedback_box div {
+    padding: 5px;
+}
+
+.feedback_box div span {
+    font-family: "IBMPlexSansKR-Regular";
+    font-weight: bold;
 }
 
 .slider_form {
