--- a/src/styles/oauth.module.css
+++ b/src/styles/oauth.module.css
@@ -1,26 +1,20 @@
 @font-face {
 	font-family: 'Kakao';
-	src: url('/static/KakaoRegular.woff') format('woff');
+	src: url('../fonts/KakaoRegular.woff') format('woff');
 	font-weight: 400;
 }
 
-html, body {
-	scroll-behavior: auto;
-	-webkit-overflow-scrolling: touch;
-	font-size: 16px;
-}
 
-body {
+.oauth_body {
   height: 100vh;
 	padding: 0;
   margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #000000;
 }
 
-* {
+.oauth {
   outline: none;
   font-family: 'Kakao', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", sans-serif;
   font-weight: 400;
@@ -107,41 +101,6 @@ body {
 .footer a:hover {
   text-decoration: underline;
   text-underline-position: under;
-}
-
-.loading {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0,0,0,.4);
-  backdrop-filter: blur(12px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 10;
-}
-
-.loading_circle {
-  position: relative;
-  width: 32px;
-  height: 32px;
-  border-top: 4px solid #FFDE02;
-  border-right: 4px solid #FFDE02;
-  border-bottom: 4px solid #FFDE02;
-  border-left: 4px solid rgba(0,0,0,0);
-  border-radius: 45px;
-  z-index: 11;
-  
-  animation: Loading 1s linear infinite;
-}
-
-@keyframes Loading {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .thumnail {
