feat: 로그인, 로그아웃 버튼 추가를 위해 모바일 햄버거버튼 추가
Signed-off-by: JangSeHun <westreed@naver.com>

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -5,12 +5,16 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    background-color: #fff;
     height: var(--navbar-height);
+    width: 100%;
+    max-width: 940px;
 }
 
 .nav {
     display: flex;
     flex-direction: row;
+
 }
 
 ul {
