refactor: 로그인했을 때에만 면접시작 버튼이 나타도록 변경
Signed-off-by: JangSeHun <westreed@naver.com>

--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -19,6 +19,11 @@
     margin-left: 4em;
     margin-right: 4em;
     text-align: left;
+
+    @media screen and (max-width: 768px) {
+        margin-left: 1em;
+        margin-right: 1em;
+    }
 }
 
 .title_content_start {
