refactor: footer 디자인 개선
Signed-off-by: JangSeHun <westreed@naver.com>

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,5 +1,10 @@
 .footer_box {
     margin-bottom: 1em;
+    margin-left: auto;
+
+    @media screen and (max-width: 768px) {
+        margin-left: 3em;
+    }
 }
 
 .footer_list {
