--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -29,7 +29,7 @@
 .title_content_start {
     margin-top: 20px;
     color: #818181;
-    font-size: 12px;
+    font-size: 0.85em;
     font-family: "IBMPlexSansKR-Regular";
 }
 
