refactor: Main페이지의 첫화면은 꽉차게 배치되도록 변경
Signed-off-by: JangSeHun <westreed@naver.com>

--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -1,4 +1,11 @@
 
+.first_section {
+    min-height: 700px;
+    height: calc(100vh - 94px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
 .title_header {
     display: flex;
