--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -80,3 +80,14 @@
     font-size: 5px;
     user-select: none;
 }
+
+.floating_button {
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
+
+    @media screen and (max-width: 1280px) {
+        right: 20px;
+        bottom: 20px;
+    }
+}
