design: Main 페이지 css 수정
Signed-off-by: JangSeHun <westreed@naver.com>

--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -5,7 +5,7 @@
     /*height: calc(100vh - 94px);*/
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
 }
 
 .third_section {
